--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -302,6 +302,7 @@ fragment's WBO is within the threshold of the parent WBO.
 | carboxylic acid | `[CX3](=O)[OX1H0-,OX2H1]` |
 | nitro | `([NX3+](=O)[O-])`, `([NX3](=O)=O)` |
 | ester | `[CX3](=O)[OX2H0]` |
+| tri-halides | `[#6]((([F,Cl,I,Br])[F,Cl,I,Br])[F,Cl,I,Br])`
 
 Table: **Functional groups that are not fragmented**. This list is not comprehensive as it only includes functional groups that were
 present in the validation set. Users can add their own functional groups they
