--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -19,7 +19,7 @@ shifts in the distributions observed in figure @fig:dabrafenib_wbo_dists are als
 `should I add more figures on the kind of things I saw? SI?`{.orange}
 
 This kind of data can potentially be used to complement knowledge based molecular similarity applications which are usually
-defined locally and might not detect long range effects. In addition, since WBO is anti-correlated with Hammett resonance parameters (fig @fig:substituted_phenyls C and D),
+defined locally and might not detect long range effects. In addition, since WBO is anti-correlated with Hammett resonance parameters (Figure @fig:hammett),
 and shifts in distributions also seem to detect pKa shifts, WBOs may be useful in improving pKa predictions.
 
 We are sharing the dataset as a benchmark set for future fragmentation schemes. It is also straight forward to generate such data for molecules
@@ -53,7 +53,7 @@ This can allow us to avoid running expensive, hard to converge, QC torsion scans
 
 The WBO is a measure of electron population overlap between atoms in a bond, so its relative changes is a good indication of
 conjugation and therefor a surrogate for torsion barrier heights (fig @fig:substituted_phenyls, E). However, as we have shown in
-figure @fig:sub_phenyl_qc_scan and [Hold for SI], relative changes in WBO for the same torsion type in different chemical
+figure @fig:sub_phenyl_qc_scan and SI Figures @fig:phenyl_td_1, @fig:phenyl_td_2, @fig:phenyl_td_3, @fig:phenyl_td_4, @phenyl_td_5, relative changes in WBO for the same torsion type in different chemical
 environments only capture change of scale in torsion scans, not changes in the profile (relative amplitutes,  periodicities and location of minima and maxima).
 There are several ways a torsion scan of the same torsion type in different chemical environments can change besides scale.
 One, symmetry around zero is lost, either with the minima and maxima shifting, or when one maxima is higher than the
@@ -115,7 +115,7 @@ and use those values instead of WBOs to determine the disruption of electron pop
 
 However, both of the above solutions, while reducing the cost of extent of conjugation detection, will still rely on needing
 to find the optimal path to grow our the fragment. A data-driven approach, which can find the optimal fragment is the ideal solution.
-The OFF QC datasets on QCArchive [@url:https://qcarchive.molssi.org/] all include Wiberg Löwdin bond orders for all conformations. Given the
+The OFF QC datasets on QCArchive [@url:https://qcarchive.molssi.org/] all include Wiberg bond orders for all conformations. Given the
 sheer number of data available on QCArchive, and the long range information WBOs captures, it will be possible to train an
 ML moldel to find which parts of a molecule are electronically couped and need to be conserved when fragmenting to reproduce
 the parent molecule chemical environment. This data-driven approach will reduce the cost of fragmeting and also potentially
