mods to discussion

--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -15,7 +15,7 @@ At closer proximities that was not relevant for this study, and when functional 
 the changes in the distributions detect varied effects. Many of these effects confirmed known considerations, such as removing
 a carbonyl from an amide or carboxylic group. But some were more subtle, such as changes observed vis-à-vis primary, secondary,
 and tertiary amines. The changes seem to pick up on subtle pKa changes for different amines [@doi:10.1002/cmdc.200700059]. In addition, the
-shifts in the distributions observed in figure @fig:dabrafenib_wbo_dists are also picking up on the effects of fluorine on sulfinamide.
+shifts in the distributions observed in figure @fig:dabrafenib_wbo_dists are also picking up on the effects of fluorine on sulfonamide.
 `should I add more figures on the kind of things I saw? SI?`{.orange}
 
 This kind of data can potentially be used to complement knowledge based molecular similarity applications which are usually
@@ -41,23 +41,23 @@ MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variab
 force constants. Given the relationship we find in figure @fig:substituted_phenyls, E, we should be able to extrapolate or interpolate torsion force constants by calculating
 the WBO, thus avoiding running expensive QC torsion scans. The WBO comes free with an AM1-BCC [@doi:10.1002/jcc.10128] charging calculation at no extra cost, and is also now possible to calculate
 EHT electronic populations with the OFF toolkit [@url:https://github.com/openforcefield/openforcefield].
-The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In figure @fig:substituted_phenyls, E, the lines
+The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In figure @fig:substituted_phenyls, E `There is no 6E`{.orange}, the lines
 seem to cluster into three clusters, so we can us ChemPer [@doi:10.26434/chemrxiv.8304578.v1] to generate SMIRKS patterns to capture the chemistries in
 these clusters and interpolate the torsion force constants for the different chemical environments of those patterns. This has the potential to avoid
 many expensive QC torsion scans, specifically for bespoke parameter fitting for new chemical entities, and improve torsion parameters by including long range effects.
 
-In addition, the ELF10 WBO can potentially be useful to determine if a bond is rotatable rather than relying on cheminformatics definitions.
-This can allow us to avoid running expensive, hard to converge, QC torsion scans for bonds that have very high torsion energy barriers. Instead,
+In addition, the ELF10 WBO can potentially be useful to determine bond order rather than relying on cheminformatics definitions.
+This could be a useful prescreen before running expensive, hard to converge QC torsion scans for a bond having a WBO indicating a very high torsion energy barrier.  
 
 ### 4.3 Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
 
-The WBO is a measure of electron population overlap between atoms in a bond, so its relative changes is a good indication of
-conjugation and therefor a surrogate for torsion barrier heights (fig @fig:substituted_phenyls, E). However, as we have shown in
+The WBO is a measure of electron population overlap between atoms in a bond, so a relative change is a good indication of
+conjugation and therefor a surrogate for torsion barrier heights (fig @fig:substituted_phenyls, E `There is no 6E`{.orange}). However, as we have shown in
 figure @fig:sub_phenyl_qc_scan and [Hold for SI], relative changes in WBO for the same torsion type in different chemical
 environments only capture change of scale in torsion scans, not changes in the profile (relative amplitutes,  periodicities and location of minima and maxima).
 There are several ways a torsion scan of the same torsion type in different chemical environments can change besides scale.
-One, symmetry around zero is lost, either with the minima and maxima shifting, or when one maxima is higher than the
-corresponding maxima across the symmetry line at zero degrees [Hold for SI]. In these cases, corresponding WBO scans have the same features
+Symmetry around zero can be lost, either `with the minima and maxima shifting, or when one maxima is higher than the
+corresponding maxima across the symmetry line at zero degrees : What does this mean? Do you simply mean when the local environment is chiral?`{.orange} [Hold for SI]. In these cases, corresponding WBO scans have the same features
 as the QC scans. This indicates that the changes in the profiles correspond to electronic changes in the different torsions.
 All scans that exhibit these kind of changes have torsions types that include trivalent nitrogen which can be either in
 planar or pyrmidal conformations. When we measured the improper angle of the nitrogen involved in the torsion scan, along the scan,
@@ -70,7 +70,7 @@ is pyramidal throughout the scan, its chirality stays the same, however, for the
 are not symmetric, the chirality of the nitrogen flips during the scan [Hold for SI].
 
 Another way QC torsion scan profiles can change besides scale, are when the
-the relative heights of the minimas or maximas are different or new minima or maxima are observed. Urea in figure
+the relative heights of the minima or maxima are different or new minima or maxima are observed. Urea in figure
 @fig:sub_phenyl_qc_scan, C and in [hold for SI] is an extreme example of this kind of change, but other series with bulkier X~_1~ [hold for SI]
 exhibit similar changes. In these cases, the correspond WBO scans do not have these features, but have similar profiles to
 other WBO scans in the series. This indicates that the observed changes in the profiles do not implicate changes in conjugation.
@@ -82,10 +82,10 @@ In addition, for other scans where the profiles do not change as much and X~1~ i
 ELF10 WBO has a higher torsion energy barrier than another molecule with a higher ELF10 WBO in the series), X~2~ is at the
 meta position.
 
-The torsion parameters in forcefields are supposed to model both conjugation, a quantum chemical phenomenon that is not well modeled
+The torsion parameters in forcefields are supposed to include both conjugation, a through-bond electron delocalisation phenomenon that is not well modeled
 in classical forcefields, and corrections for 1-4 nonbonded interactions. To increase transferability of torsion parameters, torsion parameters
 should not include non bonded interactions beyond the 1-4 atoms. However, in general, it is difficult to separate the contributions
-of sterics and conjugation in a QC torsion scan. Here, it seems like the WBO scans along torsion scans, and relative ELF10 WBOs can
+of sterics and conjugation in a QC torsion scan. Here, it seems like the `WBO scans along torsion scans(?What?)`{.orange}, and relative ELF10 WBOs can
 provide a way to separate these contributions. If a torsion profile changes relative to another torsion profile of the same torsion type,
 and their WBO scans along the torsion profile only change in scale,
 or if their relative barrier heights are not in the same order as their ELF10 WBO estimate, the changes are probably coming from nonbonded
@@ -94,7 +94,7 @@ the corresponding WBO scan, then the profile change is inherent to the electron 
 
 ### 4.4 Using Bond orders when fragmenting molecules captures long range effects that simple rules do not
 
-Relative changes in bond orders between the fragments and their parent molecules, are a good indication of disruption of electron density
+Relative changes in bond orders between the fragments and their parent molecules, are a good indication of changes to the electron density
 around a central bond. QC torsion scans capture both steric and conjugation effects so torsion force field parameters should capture
 both short range non bonded corrections and conjugation. However, simple fragmentation rules assumes that including 1-5 atoms around the central
 bond (including rings and functional groups) is enough to capture conjugation effects in addition to sterics. While this assumption holds
