addressed Mobley comments

--- a/content/03.theory-and-definitions.md
+++ b/content/03.theory-and-definitions.md
@@ -34,7 +34,7 @@ Given how large the search space can become, we use several heuristics as descri
 
 ### 2.2 Physical definitions
 
-In most MM force fields, torsion types are defined by the four atoms involved in a torsion. However,
+In most MM force fields, torsions are defined by the four atoms involved in a torsion. However,
 the torsion energy function (or profile) of a bond is determined by a combination of local and non-local effects from conjugation,
 hyperconjugation, sterics and electrostatics
 [@doi:10.1021/acs.jcim.9b00585; @doi:10.1021/acs.jcim.7b00645; @doi:10.1038/35079036; @doi:10.1021/jp046290d]. For this study
