--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -1,38 +1,37 @@
 ## 3. Results
 
-### 3.1 Torsion energy barriers are sensitive to the chemical environment, which can be influenced by remote substituents
-In most forcefields, torsions are defined by the quartet of atom types involved in the dihedral [@doi:10.1021/ja00315a051; @doi:10.1021/ja00124a002;
-@doi:10.1002/jcc.540040211; @doi:10.1021/ja9621760].
+### 3.1 Torsion energy barriers are sensitive to the chemical environment which can be influenced by remote substituents.
+In most forcefields, torsions are defined by the quartet of atoms types involved in the dihedral [@doi:10.1021/ja00315a051; @doi:10.1021/ja00124a002;
+@doi:10.1002/jcc.540040211; @doi:10.1021/ja9621760]. Atom types encode chemical environments of atoms that usually only incorporate the local environment.
 However, the quartet of atom types do not always capture the relevant chemistry, especially when the effects
 are non local i.e., atoms contributing to hyperconjugation, delocalization or other non classical effects,
 are not part of the quartet involved in the torsion [@doi:10.1186/s13321-019-0371-6].
 In particular, with conjugated systems, distal electron-donating or -withdrawing substituents can exert a strong effect
 on a torsional barrier height.
-Figure {@fig:biphenyls}, A illustrates
-such a case with a series of biphenyls in different protonation states. While the MM torsion profiles
-are all the same (Figure @fig:biphenyls D), the QC torsion profiles are different for each protonation state (Figure @fig:biphenyls E).
+Simple examples can help illustrate this, like the biphenyl example in different protonation statesshown in  {@fig:biphenyls}, A.
+While the MM torsion profiles are all the same (Figure @fig:biphenyls D), the QC torsion profiles are different for each
+protonation state (Figure @fig:biphenyls E).
 The torsion energy barrier increases relative to the neutral state for the cation, anion and zwitterion, in that order.
 The profile changes qualitatively as well. For the neutral molecule, the lowest energy conformer
 is slightly out of plane, at $150^{\circ}$ and $120^{\circ}$.  For the others, the lowest energy 
 conformer is at $180^{\circ}$. In the neutral molecule, the slightly out-of-plane conformer is preferred to accommodate
 the proximal hydrogens. In the other cases, the increasing double-bond character of the conjugated central bond (shown for the zwitterion in Figure @fig:biphenyls B) makes the planar conformer preferred.
-{Note the use of hyphens when "out-of-plane" is used as an adjective: "This bond is out of plane" versus "This is an out-of-plane bond".}
 
 This trend poses several problems to
-automatic forcefield parametrization. Most general forcefields consider the central bond
-in the zwitterion equally rotatable which is reflected in the same torsion parameters for all four molecules (Figure @fig:biphenyls, D)
-while the QC scan clearly shows that it is not. This illustrates one
+automatic forcefield parametrization. Most general forcefields consider the central bond in all tautomers
+equally rotatable so their MM torsion profiles are all the same (Figure @fig:biphenyls, D)
+while the QC scan clearly shows that they are not. This illustrates one
 of the fundamental limits of atom types in classical forcefields. At what point in this series should
 a new atom type be introduced? The Open Force Field Initiative's effort on automating data driven direct
 chemical perception [@doi:10.1021/acs.jctc.8b00640 ;@doi:10.1021/acs.jctc.8b00821; @doi:10.26434/chemrxiv.8304578.v1]
 addresses this problem by using SMIRKS patterns to assign parameters, and providing a framework to sample over 
 SMIRKS space in a data driven way. In addition, this example illustrates why fragmenting molecules
 appropriately for QC torsion scans requires human expertise and is difficult to automate. 
-In this case, a small changes three bonds away from the torsion central bond gradually changed the conjugated bond from 
+In this case, a remote changes three bonds away from the torsion central bond gradually changed the conjugated bond from
 being highly rotatable to non-rotatable as the conjugation increased. When fragmenting molecules, we need to avoid
 destroying a bond's chemical environment by naively removing an important remote substituent.
 
-![**Torsion profiles can be sensitive to remote substituents changes in a molecule**
+![**Torsion profiles can be sensitive to remote substituents changes in a molecule.**
 **[A]** Biphenyl protonation states and tautomers with increasing Wiberg bond order for the central bond.
 **[B]** The resonance structure of the biphenyl zwitterion shows how the central bond is highly conjugated. The Wiberg bond order
 and torsion scan for this bond (see **A** and **C**) are reflective of a conjugated bond. **[C]** Relative QC energy as a function of
@@ -64,7 +63,7 @@ will be a robust descriptor. In addition, we also investigated the generality of
 In this section we will first discuss our findings and solution to the conformational dependency and then discuss how general the linear relationship is.
 
 #### 3.3.1 Conformation dependent variance of WBOs are higher for conjugated bonds
-WBOs are conformationally dependent since they are a function of the electronic density. However, not all bonds' WBOs
+WBOs are conformational-dependent since they are a function of the electronic density. However, not all bonds' WBOs
 change the same way with conformation. We found that WBOs for conjugated bonds have higher variance with respect to conformation and that bonds
 involved in conjugated systems have WBOs that are correlated with each other.
 
@@ -97,7 +96,7 @@ formed by atoms numbered 10 - 13 are freely rotating. This is reflected by the t
 The bonds involving the ether oxygens and aromatic rings (formed by atoms numbered 1-3, 8-10, 19, 23-24) exhibit higher variance. It is interesting to note the
 difference in the WBOs for the conjugated bonds formed by the nitrogen between
 the quinazoline and chloro fluoro phenyl (bonds formed by atoms numbered 19, 23 and 23, 24). Both of these bonds are conjugated
-with their neighboring ring systems, however, While the distribution of WBOs for bond 23-19
+with their neighboring ring systems. However, while the distribution of WBOs for bond 23-19
 (the grey distribution) has two modes clear modes of almost equal weights, the WBO distribution for bond 24-23 has lower variance. This is in agreement
 with the resonance structures shown in Figure @fig:wbo_var_corr. The resonance structures that have the double bond on the bond closer to
 the quinazoline (bond 19-23) are more stable because the negative charge is on a nitrogen. When the double bond is on the neighboring
