--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -9,7 +9,7 @@ Torsion potentials for general force fields {may need definition of general vers
 are particularly problematic because historical approaches to their determination tend to produce
 parameters that generalize poorly [@doi:10.1186/s13321-019-0371-6]. 
 In particular, torsional potentials where the central bond is part of a conjugated system of bonds can be
-strongly influenced by distal substituents, an effect very difficult to represent in a general force field
+strongly influenced by distal substituents, an effect very difficult to represent in a force field
 using only local chemistry to define the parameters.
 This lack of generalizability has let many practitioners to aim to improve the force field accuracy by refitting torsion
 parameters for individual molecules in a semi automated bespoke fashion [@doi:10.1002/jcc.23775; @doi:10.1002/jcc.23422;
