--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -27,7 +27,7 @@ chemical perception [@doi:10.1021/acs.jctc.8b00640 ;@doi:10.1021/acs.jctc.8b0082
 addresses this problem by using SMIRKS patterns to assign parameters, and providing a framework to sample over 
 SMIRKS space in a data driven way. In addition, this example illustrates why fragmenting molecules
 appropriately for QC torsion scans requires human expertise and is difficult to automate. 
-In this case, a remote changes three bonds away from the torsion central bond gradually changed the conjugated bond from
+In this case, remote changes three bonds away from the torsion central bond gradually changed the conjugated bond from
 being highly rotatable to non-rotatable as the conjugation increased. When fragmenting molecules, we need to avoid
 destroying a bond's chemical environment by naively removing an important remote substituent.
 
