updated figures 9 and 10

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -326,10 +326,14 @@ on 2019-06-06) [@doi:10.1093/nar/gkx1037] with the following criteria:
 4. Molecule must have at least one aromatic ring
 5. Molecule has only one connnected component
 
-This left us with 730 small molecules `[hold for SI]`{.red}. Charged molecules exacerbates remote substituent sensitivity and many
+![**Representative diverse drug-like molecules used to generate the validation set.**
+Twenty representative molecules in the validation set after filtering DrugBank shown here to illustrate the diversity
+of the set.](images/representative_molecules.svg){#fig:validation_set_rep}
+
+This left us with 730 small molecules (representative molecules are shown in @fig:validation_set_rep). Charged molecules exacerbates remote substituent sensitivity and many
 molecules are in charged states at physiological pH. To ensure that our dataset is representative of drugs at physiological pH, we used
-the OpenEye `EnumerateReasonableTautomers` to generate tautomers that are highly populated at pH ~7.4 `[quacpac citation]`{.red}. This tautomer enumeration
-extended the set to 1289 small molecules `[hold for SI]`{.red}
+the OpenEye `EnumerateReasonableTautomers` to generate tautomers that are highly populated at pH ~7.4 [@url:https://docs.eyesopen.com/applications/quacpac/index.html]. This tautomer enumeration
+extended the set to 1289 small molecules `[hold for SI smi file]`{.red}
 We then generated all possible fragments of these molecules by using a combinatorial fragmentation scheme. In this scheme, every rotatable
 bond is fragmented and then all possible connected fragments are generated where the smallest fragment has 4 heavy atoms and the largest
 fragment is the parent molecule. This scheme generated ~300,000 fragments.
@@ -338,14 +342,14 @@ in a distribution of WBOs for all bonds in all fragments. The resulting dataset 
 chemical changes are detected.
 
 ![**Changes in WBO distributions are a good indicator of remote substituent electronic effects**
-**[A]** An illustrative example of the shift in the conformationally dependent WBO distributions due to crucial chemical changes such as
-the loss of Fluorine. The distributions are shaded with their corresponding distance score shown in the colorbar on the right. The parent
-molecule WBO distribution (numbered 4) is shaded red. Selected distributions are outlined and the corresponding fragments are shown in C.
-**[B]** Computational cost of fragment ($heavy atoms^3$) vs distance score (MMD) of the fragment indicates that it is possible
-to reduce teh cost of torsion scans without destroying the torsion profile. The black line is the Pareto frontier, or the
+**[A]** An illustrative example of the shift in the conformational-dependent WBO distributions due to crucial chemical changes such as
+the loss of fluorine. The distributions are shaded with their corresponding distance score shown in the color bar on the right. The parent
+molecule WBO distribution (numbered 4) is shaded red. Selected distributions are outlined and the corresponding fragments are shown in **C**.
+**[B]** Computational cost of fragment (NHeavy^2.6^) vs distance score (MMD) of the fragment indicates that it is possible
+to reduce the cost of torsion scans without destroying the torsion profile. The black line is the Pareto frontier, or the
 cheapest fragment with the best score at that size. The selected fragment should be on the Pareto front at the
 lower left corner. **[C]** Selected fragments. Bonds are highlighted with their distance score. The ELF10 WBO is shown
-in the boxes above the highlighted bonds.](images/figure_9.svg){#fig:dabrafenib_wbo_dists}
+in the boxes above the highlighted bonds.](images/exhaustive-fragmentation.svg){#fig:dabrafenib_wbo_dists}
 
 Figure {@fig:dabrafenib_wbo_dists} shows an example of the results of exhaustive
 fragmentation and how this data can be used to benchmark fragmentation schemes. All rotatable bonds in the parent molecule, Dabrafenib (Figure {@fig:dabrafenib_wbo_dists}C 4)
