addressed John's comments

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -411,7 +411,7 @@ While fragments 1, 5 and 8 are all small, the loss of the ring results in larger
 
 In molecule 12, both the amide and ester bond are sensitive to the same circled negatively charged oxygen.
 
-![**Some bonds are more sensitive to removal of remote substituents and are therefore challenging to fragment**
+![**Some bonds are more sensitive to removal of remote substituents and are therefore challenging to fragment.**
 Selected molecules of the validation set are shown to illustrate differential bond sensitivity to remote substituent changes.
 Bonds are highlighted by how sensitive they are to remote substituent changes as quantified by the bond sensitivity score.
 The bond sensitivity score is given by finding the maximum distance score of WBO distributions of the bond in fragments
@@ -438,7 +438,7 @@ the WBO distribution of the amide bond shifts significantly if the positively ch
 In molecule 11, the removal of the phosphate group shifts the distribution of the red bond. In molecule 12, both the amide and ester bond are sensitive to the same
 negatively charged oxygen indicated by two circles around the oxygen.
 
-![**Assessment of fragmentation scheme illustrate an accuracy vs cost trade-off**
+![**Different WBO disruption thresholds result i different accuracy vs cost trade-offs.**
 Computational cost vs distance score of the fragments for the bonds in the benchmark set shown in Figure {@fig:full_validation_set}.
 Computational cost is the cubed of heavy atoms in the fragment. The threshold is the maximum amount of change allowed
 in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](images/figure-11-fixed.svg){#fig:joint_plots}
@@ -455,7 +455,7 @@ leads us to recommend a distruption threshold of 0.03 for our fragmentation sche
 plots in Figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01, 0.03 and 0.05. This scheme  performs better than other schemes such as the
 scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](Figure {@fig:joint_plots}, lower right and table @tbl:benchmark).
 
-|distruption threshold | fragments in lower left quadrant |
+|WBO disruption threshold | Number of fragments in optimal fragment quadrant |
 |---|---|
 | 0.001 | 153 |
 | 0.005 | 197 |
@@ -471,9 +471,9 @@ Table: Number of fragments in the lower left quadrant in Figure {@fig:joint_plot
 
 #### 3.5.3 Benchmark results reveal chemical groups that induce long range effects
 
-![**Using the WBO as an indicator of chemical environment distruption improves fragmentation**
+![**Using the WBO as an indicator of chemical environment disruption improves performance of fragmentation algorithm.**
 Distribution of differences in distance scores for fragments in the validation set (SI Figure @fig:full_validation_set) generated using
-Pfizer's rules and our scheme using 0.03 as the distruption threshold. For many bonds, both approaches yield equally performing fragments (shown in green). In some cases,
+Pfizer's rules and our scheme using 0.03 as the disruption threshold. For many bonds, both approaches yield equally performing fragments (shown in green). In some cases,
 Prizer's rules performs better than our scheme (shown in red), however, the differences are usually very small. In most cases, using the WBO as an indicator improves
 the distance score (shown in blue)](images/combined_score_differences.svg){#fig:difference_hist}
 
@@ -494,7 +494,7 @@ the WBO as an indicator significantly improves the electron population overlap a
 It is important to note that when the fragment generated from both scheme are the same (green in Figure @fig:difference_hist), they are not necessarily the
 optimal fragment and both schemes can perform equally poorly (see SI).
 
-![**Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments**
+![**Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments.**
 Wiberg bond order distributions for parent molecules (shown in blue) and fragments generated with Pfizer rules (shown in orange) and our
 scheme (shown in green). This figure shows eight chemical groups where the WBO distributions of the highlighted bonds change
 when those groups are removed. These changes are consistent across the validation set.
@@ -513,14 +513,14 @@ A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and
 for removing a nitro group and sulfur (Figure @fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
 validation set (SI).
 
-![**Using the WBO as an indicator when fragmenting can still fail to find the optimal fragment**
-Our scheme can fail in several ways. A. A smaller fragment (shown in orange) is just as good as a larger fragment (shown in green) even if the ELF10 WBO estimate
-of the bond in the smaller fragment relative to its parent (shown in blue) is more than the disruption threshold. B. While our scheme finds a fragment with good
+![**Using the WBO as an indicator when fragmenting can still fail to find the optimal fragment.**
+Our scheme can fail in several ways. **[A]** A smaller fragment (shown in orange) is just as good as a larger fragment (shown in green) even if the ELF10 WBO estimate
+of the bond in the smaller fragment relative to its parent (shown in blue) is more than the disruption threshold. **[B]** While our scheme finds a fragment with good
 overlap of the WBO distributions (shown in green), it is not the smallest fragment possible with good distributions overlap (smallest
-fragment with good overlap is shown in purple). C. The fragment
+fragment with good overlap is shown in purple). **[C]** The fragment
 we find is bigger than what the simple scheme finds (shown in orange) but without improving the WBO overlap (green). The optimal fragment that
-neither scheme generates is shown in purple. D. Our scheme finds a larger fragment that has worse WBO distribution overlap.
-E and F. Sometimes, almost the entire molecule is needed to achieve good WBO distribution overlap between the fragment and the parent. This is
+neither scheme generates is shown in purple. **[D]** Our scheme finds a larger fragment that has worse WBO distribution overlap.
+**[E]** and **[F]**. Sometimes, almost the entire molecule is needed to achieve good WBO distribution overlap between the fragment and the parent. This is
 not a failure mode but inherent to the challenge of fragmenting molecules for QC calculations. ](images/figure-14.svg){#fig:failure_modes}
 
 While our scheme captures long range effects that a simple rule based approach does not, it is not an optimal solution and will sometimes fail to find
